tests/NormalTests/paczka1/small_fuzzy/12015954.err
Error in line 2: 5t2 S376 68,6
Error in line 9: 5t2 S4 24,0
Error in line 11: 5t2 S439 21,3
